--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     {% load static %}
     <meta charset="UTF-8">
-    <title>Flowers </title>
-    <link href="{% static 'images/icon.png' %}" rel="icon">
+    <title>Flowers - shop</title>
+    <link href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnF8emgwx5LyXnqoDf-MLZfGiNnkZ3ckmEpJ1m71zGIl1YHhhQua8D3NqbyrPM7OI2rdg&usqp=CAU " rel="icon">
     {% include 'parts/_styles.html' %}
 </head>
 <body>
@@ -16,7 +15,6 @@
 {% endblock main %}
 
 {% include 'parts/_footer.html' %}
-{% include 'parts/_js.html' %}
 
 </body>
 </html>
