--- a/config/templates/index.html
+++ b/config/templates/index.html
@@ -12,11 +12,12 @@
     {% if types %}
     <h2 class="text-center mb-4">Turlar</h2>
     <div class="row row-cols-1 row-cols-md-3 g-4">
-        {% for tur in turlar %}
+        {% for type in types %}
         <div class="col">
             <div class="card h-100 shadow-sm border-light">
                 <div class="card-body">
-                    <h5 class="card-title">{{ tur.name }}</h5>
+                    <h5 class="card-title">{{ type.name }}</h5>
+                    <p class="card-text">{{ type.created_at }}</p>
                 </div>
                 <div class="card-footer text-muted text-center">
                     <a href="{% url 'type_detail' type.id %}" class="btn btn-primary w-100">Turlarga o'tish</a>
@@ -36,12 +37,12 @@
     {% if flowers %}
     <h2 class="text-center mb-4">Gullar</h2>
     <div class="row row-cols-1 row-cols-md-3 g-4">
-        {% for gul in gullar %}
+        {% for flower in flowers %}
         <div class="col">
             <div class="card shadow-sm border-light">
                 <div class="card-body">
-                    <h5 class="card-title">{{ gul.name }}</h5>
-                    <p class="card-text">{{ gul.tur}}</p>
+                    <h5 class="card-title">{{ flower.name }}</h5>
+                    <p class="card-text">{{ flower.type.name }}</p>
                     <a href="{% url 'flower_detail' flower.id %}" class="btn btn-outline-primary w-100">
                         <i class="fas fa-info-circle"></i> Batafsil
                     </a>
